syntax="proto3";

option go_package="../model";

//Definisi package
package model;

//Response Payload
message Movie{
  string Title = 1;
  string Year = 2;
  string Imdbid = 3;
  string Type = 4;
  string Poster = 5;
}

message GetMovieListResponse{
  repeated Movie Movies = 1;
  string TotalMovieResult = 2;
  string Response = 3;
  string ErrorMessage = 4;
}


message Rating {
    string Source = 1;
    string Value = 2;
}

message GetMovieDetailResponse {
    string Title = 1;
    string Year = 2;
    string Rated = 3;
    string Released = 4;
    string Runtime = 5;
    string Genre = 6;
    string Director = 7;
    string Writer = 8;
    string Actors = 9;
    string Plot = 10;
    string Language = 11;
    string Country = 12;
    string Awards = 13;
    string Poster = 14;
    repeated Rating Ratings = 15;
    string Metascore = 16;
    string ImdbRating = 17;
    string ImdbVotes = 18;
    string ImdbID = 19;
    string Type = 20;
    string DVD = 21;
    string BoxOffice = 22;
    string Production = 23;
    string Website = 24;
    string Response = 25;
    string ErrorMessage = 26;
}

//Request Payload
message MovieSearchRequest {
  string keyword = 1;
  int32 page = 2;
}

message GetMovieDetailRequest {
    string ImdbID = 1;
}


//Define RPC service
service MovieServices{
  rpc Search(MovieSearchRequest) returns (GetMovieListResponse);
  rpc Detail(GetMovieDetailRequest) returns (GetMovieDetailResponse);
}